--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "env": {
         "browser": true,
-        "es2022": true
+        "es6": true
     },
     "extends": "eslint:recommended",
     "overrides": [
@@ -14,27 +14,28 @@
             "modules": true
         }
     },
+    "plugins": ["prettier"],
     "rules": {
         "linebreak-style": [
-            "error",
+            "warn",
             "windows"
         ],
         "quotes": [
-            "error",
+            "warn",
             "double"
         ],
         "semi": [
-            "error",
+            "warn",
             "always"
         ],
         "no-undef" : [
-            "warn"
+            "error"
         ],
         "no-unused-vars" : [
-            "warn"
+            "error"
         ],
         "no-var" : [
-            "warn"
+            "error"
         ]
     }
 }
